[gd_scene format=3 uid="uid://dlalbi73v5pyt"]

[ext_resource type="Script" uid="uid://c0el4dnd5qciu" path="res://splore_cart_item.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.05, 0.05, 0.05, 0.65)
border_width_bottom = 1
border_color = Color(0.22, 0.22, 0.22, 0.8)

[node name="SploreCartItem" type="PanelContainer" unique_id=100000001]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_normal")
script = ExtResource("1_script")

[node name="Content" type="HBoxContainer" parent="." unique_id=100000002]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CheckboxLabel" type="Label" parent="Content" unique_id=100000007]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
text = "‚¨ú"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoMargin" type="MarginContainer" parent="Content" unique_id=1388066526]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 4

[node name="InfoBox" type="VBoxContainer" parent="Content/InfoMargin" unique_id=100000004]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="LabelName" type="Label" parent="Content/InfoMargin/InfoBox" unique_id=100000005]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cart Name"
clip_text = true

[node name="LabelAuthor" type="Label" parent="Content/InfoMargin/InfoBox" unique_id=100000006]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Author"
clip_text = true

[node name="OpenBbsButton" type="Button" parent="Content" unique_id=100000008]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.42352942, 0.5647059, 0.9490196, 1)
text = "üåê"
